@@ -1,5 +1,10 @@
 2012-01-31  Vladimir Serbinenko  <phcoder@gmail.com>
 
+	* grub-core/fs/fat.c (grub_fat_mount) [!MODE_EXFAT]: Remove fstype
+	check as some mkfs implementations omit it.
+
+2012-01-31  Vladimir Serbinenko  <phcoder@gmail.com>
+
 	* docs/grub.texi (Unicode): Mention identifier and space limitations.
 
 2012-01-31  Vladimir Serbinenko  <phcoder@gmail.com>
